--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iview": "^3.0.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
+    "vue-i18n": "^8.1.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
