--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "iview": "^3.0.0",
+    "moment": "^2.24.0",
     "quill-image-resize-module": "^3.0.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
